# youtube-ai-agent

./: .dockerignore  .env.example  .gitignore  CHANGELOG.md  Caddyfile.example  Dockerfile  README.md  alembic.ini  docker-compose.prod.yml  docker-compose.yml  pyproject.toml  railway.json  render.yaml  requirements.txt
docs/: APPROVAL_HISTORY.md  ARCHITECTURE.md  ASSET_WORKFLOW.md  AUDIT_EXPORT.md  AUDIT_LOGS.md  BACKUP_RESTORE.md  DASHBOARD.md  DEPLOYMENT_DOCKER.md  DEPLOYMENT_PERSISTENCE.md  DEPLOYMENT_RAILWAY.md  DEPLOYMENT_RENDER.md  DEPLOYMENT_VPS.md  DEPLOYMENT_VPS_DOCKER_CADDY.md  DEPLOYMENT_WINDOWS_LOCAL.md  DEVELOPMENT.md  E2E_DRY_RUN.md  ENVIRONMENT.md  FFMPEG_SETUP.md  GITHUB_ACTIONS.md  MIGRATIONS.md  MIGRATION_DISCIPLINE.md  NOTIFICATIONS.md  OPERATIONS.md  PERSISTENCE.md  POSTGRES.md  PRODUCTION_CHECKLIST.md  PRODUCTION_SECURITY.md  REAL_API_SETUP_CHECKLIST.md  RELEASE_OPERATIONS.md  REVIEW_QUEUE.md  ROADMAP.md  SCHEDULING.md  SCRIPT_GENERATION.md  STOCK_MEDIA.md  STRATEGY_LEARNING.md  TTS.md  UPGRADE_ROLLBACK.md  UPLOAD_WORKFLOW.md  VIDEO_RENDERING.md  VPS_CRON.md  (+4 more)
raatverse_agent/: __init__.py  __main__.py  cli.py  config.py
raatverse_migrations/: env.py
scripts/: backup_cron.sh  deploy_vps.sh  health_check.sh  restore_from_backup.sh  run_analytics_due.sh  run_daily_draft.sh
tests/: test_analytics.py  test_analytics_api.py  test_api.py  test_assets.py  test_assets_api.py  test_config.py  test_database.py  test_ops_api.py  test_phase10_release_ops.py  test_phase8_dashboard_persistence.py  test_phase9_hardening.py  test_pipeline.py  test_render_api.py  (+7 more)
(+82 files in other folders)
